--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -18,23 +18,24 @@ jobs:
         with:
           python-version: "3.11"
 
-      # Optional: quick sanity check (won't start server, just confirms imports)
-      - name: Install dependencies
+      # (Optional but helpful) sanity check
+      - name: Show files
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          ls -la
+          python --version
 
-      - name: Create deployment zip
+      # Create a zip of SOURCE CODE (not venv)
+      - name: Zip source
         run: |
           zip -r release.zip . \
             -x "*.git*" \
             -x "*__pycache__*" \
             -x "*.venv*" \
             -x "*venv*" \
-            -x "uploads/*" \
+            -x "*uploads/*" \
             -x "*.DS_Store*"
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App (ZIP Deploy)
         uses: azure/webapps-deploy@v3
         with:
           app-name: "lily-bank-std-comparator-v4"
