--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
+# --- Web framework ---
 Flask
 gunicorn
 Werkzeug
 
+# --- Data processing ---
 pandas
-scikit-learn
 numpy
+scikit-learn
 
+# --- PDF handling (FIX for Azure AES error) ---
 pypdf
+cryptography>=3.1
 
+# --- NLP / ML ---
 torch
 sentence-transformers
 keybert
-
-
